--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alkatra&family=Roboto:ital,wght@0,500;0,900;1,100&display=swap"
+      rel="stylesheet"
+    />
     <title>YouTube Clone</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="header__left-side">
+        <img class="header__hambuguer-menu" src="./icons/hamburger-menu.svg" />
+        <img class="header__youtube-logo" src="./icons/youtube-logo.svg" />
+      </div>
+      <div class="header__search">
+        <input class="header__search-bar" type="text" placeholder="Search" />
+        <button class="header__search-button">
+          <img class="header__search-icon" src="./icons//search.svg" />
+        </button>
+        <img
+          class="header__voice-search-icon"
+          src="./icons/voice-search-icon.svg"
+        />
+      </div>
+      <div class="header__right-side">
+        <img class="header__upload-icon" src="./icons/upload.svg" />
+        <img class="header__apps-icon" src="./icons/youtube-apps.svg" />
+        <img
+          class="header__notifications-icon"
+          src="./icons/notifications.svg"
+        />
+        <img class="header__profile-picture" src="./icons/my-channel.jpeg" />
+      </div>
+    </div>
+  </body>
 </html>
