--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alkatra&family=Roboto:ital,wght@0,500;0,900;1,100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alkatra&family=Roboto&display=swap"
       rel="stylesheet"
     />
     <title>YouTube Clone</title>
@@ -38,6 +45,47 @@
           src="./icons/notifications.svg"
         />
         <img class="header__profile-picture" src="./icons/my-channel.jpeg" />
+      </div>
+    </div>
+    <div class="sidebar">
+      <div class="sidebar__icon-container">
+        <img class="sidebar__icon sidebar__home-icon" src="./icons/home.svg" />
+        <span>Home</span>
+      </div>
+      <div class="sidebar__icon-container">
+        <img
+          class="sidebar__icon sidebar__explore-icon"
+          src="./icons/explore.svg"
+        />
+        <span>Explore</span>
+      </div>
+      <div class="sidebar__icon-container">
+        <img
+          class="sidebar__icon sidebar__subscriptions-icon"
+          src="./icons/subscriptions.svg"
+        />
+        <span>Subscriptions</span>
+      </div>
+      <div class="sidebar__icon-container">
+        <img
+          class="sidebar__icon sidebar__originals-icon"
+          src="./icons/originals.svg"
+        />
+        <span>Originals</span>
+      </div>
+      <div class="sidebar__icon-container">
+        <img
+          class="sidebar__icon sidebar__music-icon"
+          src="./icons/youtube-music.svg"
+        />
+        <span>YouTube Music</span>
+      </div>
+      <div class="sidebar__icon-container">
+        <img
+          class="sidebar__icon sidebar__library-icon"
+          src="./icons/library.svg"
+        />
+        <span>Library</span>
       </div>
     </div>
   </body>
