--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sidebar.css" />
+    <link rel="stylesheet" href="./css/content.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -86,6 +87,211 @@
           src="./icons/library.svg"
         />
         <span>Library</span>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-1.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-1.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Talking Tech and AI with Google CEO Sundar Pichai!</span
+            >
+            <span class="info__channel-name">Marques Brownlee</span>
+            <span class="info__view-date">3.4M views · 6 months ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-2.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-2.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title">Try Not To Laugh Challenge #9</span>
+            <span class="info__channel-name">Markiplier</span>
+            <span class="info__view-date">19M views · 4 years ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-3.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-3.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Crazy Tik Toks Taken Moments Before DISASTER</span
+            >
+            <span class="info__channel-name">SSSniperWolf</span>
+            <span class="info__view-date">12M views · 1 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-4.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-4.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >The Simplest Math Problem No One Can Solve - Collatz
+              Conjecture</span
+            >
+            <span class="info__channel-name">Veritasium</span>
+            <span class="info__view-date">18M views · 4 months ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-5.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-5.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Kadane's Algorithm to Maximum Sum Subarray Problem</span
+            >
+            <span class="info__channel-name">CS Dojo</span>
+            <span class="info__view-date">519K views · 5 years ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-6.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-6.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Anything You Can Fit In The Circle I’ll Pay For</span
+            >
+            <span class="info__channel-name">MrBeast</span>
+            <span class="info__view-date">141M views · 1 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-7.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-7.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title">Why Planes Don't Fly Over Tibet</span>
+            <span class="info__channel-name">RealLifeLore</span>
+            <span class="info__view-date">6.6M views · 1 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-8.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-8.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Inside The World's Biggest Passenger Plane</span
+            >
+            <span class="info__channel-name">Tech Vision</span>
+            <span class="info__view-date">3.7M views · 10 months ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-9.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-9.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title">The SECRET to Super Human STRENGTH</span>
+            <span class="info__channel-name">ThenX</span>
+            <span class="info__view-date">20M views · 3 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-10.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-10.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >How The World's Largest Cruise Ship Makes 30,000 Meals Every
+              Day</span
+            >
+            <span class="info__channel-name">Business Insider</span>
+            <span class="info__view-date">14M views · 1 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-11.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-11.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >Dubai's Crazy Underwater Train and Other Things #Only in
+              Dubai</span
+            >
+            <span class="info__channel-name">Destination Tips</span>
+            <span class="info__view-date">3M views · 1 year ago</span>
+          </div>
+        </div>
+      </div>
+      <div class="content__video">
+        <div class="video__thumbnail">
+          <img src="./imgs/thumbnail-12.webp" />
+        </div>
+        <div class="video__info-grid">
+          <div class="info-grid__profile-picture">
+            <img src="./imgs/channel-12.jpeg" />
+          </div>
+          <div class="info-grid__info">
+            <span class="info__title"
+              >What would happen if you didn’t drink water? - Mia
+              Nacamulli</span
+            >
+            <span class="info__channel-name">TED-Ed</span>
+            <span class="info__view-date">12M views · 5 years ago</span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
