Added Notifications and Timestamps

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
       <div class="header__right-side">
         <img class="header__upload-icon" src="./icons/upload.svg" />
         <img class="header__apps-icon" src="./icons/youtube-apps.svg" />
-        <img
-          class="header__notifications-icon"
-          src="./icons/notifications.svg"
-        />
+        <div class="header__notifications-container">
+          <div class="header__notifications-number">3</div>
+          <img
+            class="header__notifications-icon"
+            src="./icons/notifications.svg"
+          />
+        </div>
         <img class="header__profile-picture" src="./icons/my-channel.jpeg" />
       </div>
     </div>
@@ -94,6 +97,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-1.webp" />
+          <div class="video__timestamp">14:20</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -111,6 +115,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-2.webp" />
+          <div class="video__timestamp">8:22</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -126,6 +131,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-3.webp" />
+          <div class="video__timestamp">9:13</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -143,6 +149,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-4.webp" />
+          <div class="video__timestamp">22:09</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -161,6 +168,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-5.webp" />
+          <div class="video__timestamp">11:17</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -178,6 +186,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-6.webp" />
+          <div class="video__timestamp">19:59</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -195,6 +204,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-7.webp" />
+          <div class="video__timestamp">10:13</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -210,6 +220,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-8.webp" />
+          <div class="video__timestamp">7:12</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -227,6 +238,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-9.webp" />
+          <div class="video__timestamp">13:17</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -242,6 +254,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-10.webp" />
+          <div class="video__timestamp">7:53</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -260,6 +273,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-11.webp" />
+          <div class="video__timestamp">4:10</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
@@ -278,6 +292,7 @@
       <div class="content__video">
         <div class="video__thumbnail">
           <img src="./imgs/thumbnail-12.webp" />
+          <div class="video__timestamp">4:51</div>
         </div>
         <div class="video__info-grid">
           <div class="info-grid__profile-picture">
